[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thz-blind-source-separation"
version = "0.1.0"
description = "Week 1 utilities for THz waveform loading and preprocessing"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
